# Applied-Medicine-list-renewer

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE_NOTES_TEMPLATE.md  compose.yaml  launch_pharmalist.command  pyproject.toml
.github/workflows/: macos-standalone-release.yml  windows-standalone-release.yml
config/: defaults.json  docker-defaults.json
docker/: docker-entrypoint.sh
docs/: macos-distribution-guide.html  release-integrity-operations.md  release-signing-provenance-implementation-guide.html  repo-cleaning-audit.html  repo-cleaning-implementation-guide.html  requirements-spec.html  windows-distribution-guide.md
packaging/macos/: app-launcher.sh  standalone_launcher.py
packaging/windows/: standalone_launcher.py
scripts/: build_macos_app.sh  build_macos_standalone.sh  build_windows_standalone.ps1  configure_github_actions_secrets.sh  generate_release_integrity.py  setup_local_release_machine.sh  sign_and_notarize_macos.sh
src/pharmalist/: __init__.py  cli.py  config.py  diff.py  encodings.py  mapping.py  models.py  normalize.py  output.py  profile.py  reporting.py  rules.py
tests/: test_profile.py
