[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmalist"
version = "0.1.0"
description = "Deterministic tooling for Musashino pharmaceutical CSV transformation"
readme = {file = "docs/requirements-spec.html", content-type = "text/html"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pharmalist = "pharmalist.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]